Adicionando funcionalidade para excluir pessoas